# ballroom-music-classification

./: .gitignore  Dockerfile  main.py  pyproject.toml  train.py
.github/: copilot-instructions.md
frontend/: .firebaserc  index.html
helpers/: download.py  spectrograms.py
src/: api.py  config.py  embeddings.py  inference.py  main.py  test.py  train.py
src/cnn/: dataset.py  model.py
src/helpers/: download.py  inference.py  plot.py  spectrograms.py
visual_embeddings/cqt/ChaChaCha/: Albums-Cafe_Paradiso-05_chunk000_cqt.npy  Albums-Cafe_Paradiso-05_chunk001_cqt.npy  Albums-Cafe_Paradiso-05_chunk002_cqt.npy  Albums-Cafe_Paradiso-06_chunk000_cqt.npy  Albums-Cafe_Paradiso-06_chunk001_cqt.npy  Albums-Cafe_Paradiso-06_chunk002_cqt.npy  Albums-Cafe_Paradiso-07_chunk000_cqt.npy  Albums-Cafe_Paradiso-07_chunk001_cqt.npy  Albums-Cafe_Paradiso-07_chunk002_cqt.npy  Albums-Cafe_Paradiso-08_chunk000_cqt.npy  Albums-Cafe_Paradiso-08_chunk001_cqt.npy  Albums-Cafe_Paradiso-08_chunk002_cqt.npy  Albums-Fire-01_chunk000_cqt.npy  Albums-Fire-01_chunk001_cqt.npy  Albums-Fire-01_chunk002_cqt.npy  Albums-Fire-08_chunk000_cqt.npy  Albums-Fire-08_chunk001_cqt.npy  Albums-Fire-08_chunk002_cqt.npy  Albums-Fire-14_chunk000_cqt.npy  Albums-Fire-14_chunk001_cqt.npy  Albums-Fire-14_chunk002_cqt.npy  Albums-I_Like_It2-01_chunk000_cqt.npy  Albums-I_Like_It2-01_chunk001_cqt.npy  Albums-I_Like_It2-01_chunk002_cqt.npy  Albums-I_Like_It2-02_chunk000_cqt.npy  Albums-I_Like_It2-02_chunk001_cqt.npy  Albums-I_Like_It2-02_chunk002_cqt.npy  Albums-Latin_Jam-01_chunk000_cqt.npy  Albums-Latin_Jam-01_chunk001_cqt.npy  (+833 more)
(+7671 files in other folders)
