[project]
name = "ballroommusicclassification"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
   "fastapi>=0.139.2",
   "librosa>=0.11.0",
   "matplotlib>=3.11.0",
   "numpy>=2.4.6",
   "pydub>=0.25.1",
   "timm>=1.0.27",
   "torch>=2.0.0",
   "torchaudio>=2.0.0",
   "uvicorn>=0.51.0",
]