[project]
name = "ballroommusicclassification"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision", # <-- ADD THIS
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" } # <-- ADD THIS

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
